test diff chromedriver version

--- a/main.yml
+++ b/main.yml
@@ -1,16 +1,16 @@
 ---
-- hosts: syslog
-  become: true
-  roles:
-   - configure-rsyslog
+#- hosts: syslog
+#  become: true
+#  roles:
+#   - configure-rsyslog
 
 - hosts: localhost
   become: true
   roles:
-   - install-prerequisites
+#   - install-prerequisites
    - run-selenium-tests
 
-- hosts: syslog
-  roles:
-    - export-logs
+#- hosts: syslog
+#  roles:
+#    - export-logs
 
