run headless test from chrome on mac

--- a/main.yml
+++ b/main.yml
@@ -5,9 +5,8 @@
 #   - configure-rsyslog
 
 - hosts: localhost
-  become: true
   roles:
-   - install-prerequisites
+#   - install-prerequisites
    - run-selenium-tests
 
 #- hosts: syslog
