--- a/roles/export-logs/tasks/main.yml
+++ b/roles/export-logs/tasks/main.yml
@@ -1,22 +1,35 @@
 ---
 # compare log file size from beginning of script vs now
-- name: get initial syslog file size
+- name: Get initial syslog file size
   shell: $(stat -c%s "/var/log/zero-client/zero-client.log")
   register: filesize_final
 
 - debug: var=filesize_final
 
+# Send python file to syslog server
+- name: Add parsing script to syslog server
+  copy:
+    src: files/parse-logs.py
+    dest: /var/log/zero-client/
+    mode: 774
+    
+# Run python file to parse the logs for ntp log lines (output should be sent to a new file)
+- name: Run parsing script
+  command: /usr/bin/python /var/log/zero-client/parse-logs.py
+
 - name: Archive the syslog file
   archive: 
-    path: /var/log/zero-client/zero-client.log
+    path: 
+    - /var/log/zero-client/zero-client.log
+    - /var/log/zero-client/parsed.txt
     dest: /var/log/zero-client/zero-client-log.zip
     format: zip
 
 - name: Export Zero Client syslogs to AWS S3
-  shell: aws s3 cp /var/log/zero-client/zero-client-log.zip s3://af-syslogs/
+  shell: aws s3 cp /var/log/zero-client/zero-client-log.zip s3://af-syslogs/auto-syslog/
 
 # add time delay
-- name: Wait for 1 minute before exporting logs
+- name: Wait for 1 minute before ending playbook
   wait_for:
     delay: 60 # delay playbook for 60 seconds
     timeout: 0 # timeout after 0 seconds
