modify hosts file

--- a/hosts.ini
+++ b/hosts.ini
@@ -4,9 +4,9 @@
 localhost ansible_connection=local
 
 [syslog]
-3.96.181.197
+<syslog IP>
 
 [syslog:vars]
-ansible_ssh_user=ubuntu
+ansible_ssh_user=<syslog user>
 ansible_connection=ssh
-ansible_private_key_file=~/.ssh/syslog_key
+ansible_private_key_file=~/.ssh/<syslog private key>
