--- a/roles/configure-rsyslog/tasks/main.yml
+++ b/roles/configure-rsyslog/tasks/main.yml
@@ -40,11 +40,11 @@
     name: rsyslog
     state: restarted
 
-- name: get initial syslog file size
-  shell: $(stat -c%s "/var/log/zero-client/zero-client.log")
-  register: filesize_initial
+# - name: get initial syslog file size
+#   shell: stat -c%s "/var/log/zero-client/zero-client.log"
+#   register: filesize_initial
 
-- debug: var=filesize_initial
+# - debug: var=filesize_initial
 
 - set_fact:
-    initial_log_file: $(stat -c%s "/var/log/zero-client/zero-client.log")
+    initial_log_file: stat -c%s "/var/log/zero-client/zero-client.log"
