--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -17,8 +17,8 @@ module(load="immark")  # provides --MARK-- message capability
 module(load="imudp")
 input(type="imudp" port="514")
 
-template RemoteLogs,/var/log/zero-client/zero-client.log
-. ?RemoteLogs & ~
+template remote-incoming-logs, /var/log/zero-client/zero-client.log
+*.* ?remote-incoming-logs
 
 # provides TCP syslog reception
 module(load="imtcp")
@@ -44,8 +44,8 @@ $RepeatedMsgReduction on
 # Set the default permissions for all log files.
 #
 $FileOwner syslog
-$FileGroup adm
-$FileCreateMode 0640
+$FileGroup syslog
+$FileCreateMode 0660
 $DirCreateMode 0755
 $Umask 0022
 $PrivDropToUser syslog
