--- a/roles/export-logs/tasks/main.yml
+++ b/roles/export-logs/tasks/main.yml
@@ -1,21 +1,31 @@
 ---
-# compare log file size from beginning of script vs now
+ # compare log file size from beginning of script vs now
 - name: Get initial syslog file size
-  shell: $(stat -c%s "/var/log/zero-client/zero-client.log")
+  shell: stat -c%s "/var/log/zero-client/zero-client.log"
   register: filesize_final
 
 - debug: var=filesize_final
+
+- name: Install Python
+  package:
+    name: "{{item}}"
+    state: present
+  with_items:
+    - python
+    - awscli
 
 # Send python file to syslog server
 - name: Add parsing script to syslog server
   copy:
     src: files/parse-logs.py
     dest: /var/log/zero-client/
-    mode: 774
-    
+    owner: syslog
+    group: syslog
+    mode: 0774
+
 # Run python file to parse the logs for ntp log lines (output should be sent to a new file)
 - name: Run parsing script
-  command: /usr/bin/python /var/log/zero-client/parse-logs.py
+  shell: cd /var/log/zero-client/ && sudo python parse-logs.py
 
 - name: Archive the syslog file
   archive: 
@@ -29,9 +39,9 @@
   shell: aws s3 cp /var/log/zero-client/zero-client-log.zip s3://af-syslogs/auto-syslog/
 
 # add time delay
-- name: Wait for 1 minute before ending playbook
-  wait_for:
-    delay: 60 # delay playbook for 60 seconds
-    timeout: 0 # timeout after 0 seconds
+#- name: Wait for 1 minute before ending playbook
+#  wait_for:
+#    delay: 60 # delay playbook for 60 seconds
+#    timeout: 0 # timeout after 0 seconds
 
 
