--- a/roles/install-prerequisites/tasks/main.yml
+++ b/roles/install-prerequisites/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: Install dependencies via pip
   shell: pip3 install pytest selenium pyvirtualdisplay virtualenv
-#  when: ansible_distribution == "CentOS" or ansible_distribution == "Ubuntu"
+  when: ansible_distribution == "CentOS" or ansible_distribution == "Ubuntu"
 
 - name: Install browser driver for Chrome
   unarchive:  
@@ -65,26 +65,26 @@
 - name: Install nodejs on MacOS
   become: false
   homebrew:
-    name: "{{item}}"
+    name: ['node', 'gnu-tar']
     state: present
   register: result
   until: result is successful
-  with_items:
-    - node
-    - gnu-tar
   when: homebrew_check.stat.exists
 
 - name: Install selenium
   shell: npm install -g selenium-side-runner
   when: homebrew_check.stat.exists
 
-- name: Install browser driver for Chrome
-  unarchive:
-    src: https://chromedriver.storage.googleapis.com/86.0.4240.22/chromedriver_mac64.zip
-    dest: /usr/local/bin/
-    remote_src: yes
-    mode: 766
-  when: homebrew_check.stat.exists
+#- name: Install browser driver for Chrome
+#  become: true
+#  unarchive:
+#    src: https://chromedriver.storage.googleapis.com/86.0.4240.22/chromedriver_mac64.zip
+#    dest: /usr/local/bin/
+#    remote_src: yes
+#    owner: afaulkner
+#    group: admin
+#    mode: 766
+#  when: homebrew_check.stat.exists
 
 - name: Install browser driver for Firefox
   unarchive:
