--- a/hosts.ini
+++ b/hosts.ini
@@ -4,9 +4,10 @@
 localhost ansible_connection=local
 
 [syslog]
-<syslog IP>
+#syslogip
 
 [syslog:vars]
 ansible_ssh_user=<syslog user>
 ansible_connection=ssh
 ansible_private_key_file=~/.ssh/<syslog private key>
+ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
