--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: localhost
+  vars_files:
+    - group_vars/vars.yml
   roles:
     - provision-syslog-server
 
@@ -19,5 +21,7 @@
     - export-logs
 
 #- hosts: localhost
+#  vars_files:
+#    - group_vars/vars.yml
 #  roles:
 #    - destroy-syslog-server
