--- a/roles/destroy-syslog-server/tasks/main.yml
+++ b/roles/destroy-syslog-server/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
  # destroy syslog server
 - name: Destroy syslog server
-  shell: cd /Users/afaulkner/codes/terraform/syslog-server/aws && terraform destroy -auto-approve
+  shell: "cd {{tf_path}} && terraform destroy -auto-approve"
   register: result
 - debug: msg=result
