break up syslog ip vars

--- a/roles/provision-syslog-server/tasks/main.yml
+++ b/roles/provision-syslog-server/tasks/main.yml
@@ -17,11 +17,20 @@
 # Get public IP of syslog server from task output
 - set_fact:
     syslogip: "{{tfoutput.stdout_lines[5] |  regex_search('[0-9]+.[0-9]+.[0-9]+.[0-9]+') }}"
+    ip1: syslogip[0]
+    ip2: syslogip[1]
+    ip3: syslogip[2]
+    ip4: syslogip[3]
 - debug: msg="{{syslogip}}"
+- debug: msg="{{ip1}}"
 
 - name: Add host to inventory/host group 'syslog'
   add_host:
     name: "{{ syslogip }}"
     groups: syslog
     inventory_dir: hosts.ini
+
+
+# - name: Add host to Zero Client AWI
+
 
