--- a/main.yml
+++ b/main.yml
@@ -5,20 +5,20 @@
   roles:
     - provision-syslog-server
 
-- hosts: syslog
-  become: true
-  roles:
-   - configure-rsyslog
-
+#- hosts: syslog
+#  become: true
+#  roles:
+#   - configure-rsyslog
+#
 - hosts: localhost
   roles:
-   - install-prerequisites
+#   - install-prerequisites
    - run-selenium-tests
-
-- hosts: syslog
-  become: true
-  roles:
-    - export-logs
+#
+#- hosts: syslog
+#  become: true
+#  roles:
+#    - export-logs
 
 #- hosts: localhost
 #  vars_files:
