--- a/roles/provision-syslog-server/tasks/main.yml
+++ b/roles/provision-syslog-server/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 #provision syslog server
-#- name: Provision syslog server
-#  shell: cd /Users/afaulkner/codes/terraform/syslog-server/aws && terraform apply -auto-approve
-#  register: tfoutput
-#- debug: var=tfoutput
-#
-#- name: Wait for syslog to provision
-#  wait_for_connection:
-#    sleep: 300 #wait for 5 minutes before moving on
+- name: Provision syslog server
+  shell: cd /Users/afaulkner/codes/terraform/syslog-server/aws && terraform apply -auto-approve
+  register: tfoutput
+- debug: var=tfoutput
+
+- name: Wait for syslog to provision
+  wait_for_connection:
+    sleep: 300 #wait for 5 minutes before moving on
 
 - name: Get terraform output
   shell: "cd {{tf_path}} && terraform output"
@@ -19,16 +19,18 @@
     syslogip: "{{tfoutput.stdout_lines[5] |  regex_search('[0-9]+.[0-9]+.[0-9]+.[0-9]+')}}"
 
 - set_fact:
-    ip1: "{{syslogip.split('.')[0]}}"
-    ip2: "{{syslogip.split('.')[1]}}"
-    ip3: "{{syslogip.split('.')[2]}}"
-    ip4: "{{syslogip.split('.')[3]}}"
+    ip0: "{{syslogip.split('.')[0]}}"
+    ip1: "{{syslogip.split('.')[1]}}"
+    ip2: "{{syslogip.split('.')[2]}}"
+    ip3: "{{syslogip.split('.')[3]}}"
+    cacheable: yes
+
 
 - debug: msg="{{syslogip}}"
+- debug: msg="{{ip0}}"
 - debug: msg="{{ip1}}"
 - debug: msg="{{ip2}}"
 - debug: msg="{{ip3}}"
-- debug: msg="{{ip4}}"
 
 - name: Add host to inventory/host group 'syslog'
   add_host:
