--- a/roles/install-prerequisites/tasks/main.yml
+++ b/roles/install-prerequisites/tasks/main.yml
@@ -75,16 +75,16 @@
   shell: npm install -g selenium-side-runner
   when: homebrew_check.stat.exists
 
-#- name: Install browser driver for Chrome
-#  become: true
-#  unarchive:
-#    src: https://chromedriver.storage.googleapis.com/86.0.4240.22/chromedriver_mac64.zip
-#    dest: /usr/local/bin/
-#    remote_src: yes
-#    owner: afaulkner
-#    group: admin
-#    mode: 766
-#  when: homebrew_check.stat.exists
+- name: Install browser driver for Chrome
+  become: true
+  unarchive:
+    src: https://chromedriver.storage.googleapis.com/86.0.4240.22/chromedriver_mac64.zip
+    dest: /usr/local/bin/
+    remote_src: yes
+    owner: afaulkner
+    group: admin
+    mode: 766
+  when: homebrew_check.stat.exists
 
 - name: Install browser driver for Firefox
   unarchive:
