--- a/roles/install-prerequisites/tasks/main.yml
+++ b/roles/install-prerequisites/tasks/main.yml
@@ -75,6 +75,12 @@
   shell: npm install -g selenium-side-runner
   when: homebrew_check.stat.exists
 
+- name: Verify if chrome driver exists
+  stat:
+    path: /usr/local/bin/chromedriver
+  register: chromedriver_check
+  when: homebrew_check.stat.exists
+
 - name: Install browser driver for Chrome
   become: true
   unarchive:
@@ -84,17 +90,17 @@
     owner: afaulkner
     group: admin
     mode: 766
-  when: homebrew_check.stat.exists
+  when: homebrew_check.stat.exists and not chromedriver_check.stat.exists
 
-- name: Install browser driver for Firefox
-  unarchive:
-    src: https://github.com/mozilla/geckodriver/releases/download/v0.27.0/geckodriver-v0.27.0-macos.tar.gz
-    dest: /usr/local/bin/
-    remote_src: yes
-    owner: afaulkner
-    group: admin
-    mode: 766
-  when: homebrew_check.stat.exists
+#- name: Install browser driver for Firefox
+#  unarchive:
+#    src: https://github.com/mozilla/geckodriver/releases/download/v0.27.0/geckodriver-v0.27.0-macos.tar.gz
+#    dest: /usr/local/bin/
+#    remote_src: yes
+#    owner: afaulkner
+#    group: admin
+#    mode: 766
+#  when: homebrew_check.stat.exists
 
 - name: Install dependencies via pip
   shell: pip3 install pytest pyyaml
