--- a/roles/provision-syslog-server/tasks/main.yml
+++ b/roles/provision-syslog-server/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+# initialize syslog terraform
+- name: Initialize syslog terraform
+  shell: "cd {{tf_path}} && terraform init"
+
 #provision syslog server
 - name: Provision syslog server
   shell: "cd {{tf_path}} && terraform apply -auto-approve"
