variablize zc ip, update readme

--- a/roles/destroy-syslog-server/tasks/main.yml
+++ b/roles/destroy-syslog-server/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Cleanup Zero Client to prepare for future tests (disable syslog)
-  shell: python files/cleanup.py
+  shell: python files/cleanup.py {{zc_ip}}
   register: result
 
 - debug: var=result
